[package]
authors = ["gpoblon"]
edition = "2024"
version = "0.1.0"
name = "rune-examples"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["desktop"] }
dioxus-stores = "0.7.0-rc.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
