[package]
name = "dioxus-collection-store"
version = "0.1.0"
edition = "2024"
authors = ["gpoblon <gpoblon@ryse.ovh>"]
license = "MIT OR Apache-2.0"
description = "Trait-based reactive collection stores for Dioxus with unified API for Vec, HashMap, and custom collections"
repository = "https://github.com/gpoblon/dx-collection"
documentation = "https://docs.rs/dioxus-collection-store"
readme = "README.md"
keywords = ["dioxus", "collection", "store"]
categories = ["gui"]

[dependencies]
# Minimal reactive store primitives - no UI dependencies
dioxus-stores = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main" }

[dev-dependencies]
# Full Dioxus with desktop support for examples
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main", features = [
    "desktop",
] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
